# p2p-app

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README-ru.md  README.md  install.sh  main.cpp  scraper.hpp
Logic/: config.json  data_processing.cpp  data_processing.hpp  json_tools.cpp  json_tools.hpp  logic_main.cpp  logic_manager.cpp  parser_connection_client.cpp  parser_connection_client.hpp  storage_structures.hpp  testing_not_for_prod.cpp  users_connections_server.cpp  users_connections_server.hpp
client/: CMakeLists.txt  README.md  accounthandler.cpp  accounthandler.h  chainmonitor.cpp  chainmonitor.h  chainmonitor.ui  chaintableview.cpp  chaintableview.h  config.h  config.json  data_reciever.cpp  datareciever.cpp  datareciever.h  favouritepage.cpp  favouritepage.h  favouritepage.ui  globalcondition.cpp  globalcondition.h  headermenu.cpp  headermenu.h  logic_fwd.h  logic_fwd.hpp  logic_simulator.cpp  logic_simulator.h  loginpage.cpp  loginpage.h  loginpage.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_fwd.hpp  mypage.cpp  mypage.h  mypage.ui  notifypage.cpp  notifypage.h  notifypage.ui  registerpage.cpp  (+15 more)
client/resourses/css/: style-menu.css  style.css
client/resourses/icons/: icon.icns
exchange scraper/: README.md  exchanges.cpp  exchanges.hpp  main.cpp  markets.cpp  markets.hpp  scraper.cpp  scraper.hpp  test.cpp
exchange scraper/bybit scraper/: bybit scraper.py
exchange scraper/exchange scraper_/bybit scraper/: .python-version
exchange scraper/exchange scraper_/htx scraper/: .python-version  htx scraper.py
exchange scraper/htx scraper/: htx scraper.py
exchange scraper/tests/: bybit simulator.cpp
exchange simulator/: README.md  main.cpp
exchange_scraper/: .clang-tidy  CMakeLists.txt  markets.cpp  markets.hpp  scraper.hpp
exchange_scraper/exchange scraper_/bybit scraper/: bybit scraper.py
exchange_scraper/exchange scraper_/jsons/: data_market.json
server logic/: CMakeLists.txt  config.json  data_processing.cpp  data_processing.hpp  json_tools.cpp  json_tools.hpp  logic_manager.cpp  logic_manager.hpp  users_connections_server.cpp  users_connections_server.hpp
server logic/tests/: mock_data.json  test_main.cpp
server_logic/: CMakeLists.txt  data_processing.cpp  json_tools.cpp  json_tools.hpp  logic_main.cpp  logic_manager.cpp  parser_connection_client.cpp  parser_connection_client.hpp  server_logic  storage_structures.hpp  store_info.md  users_connections_server.cpp  users_connections_server.hpp
server_logic/tests/: test_main.cpp
